--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <div class="container">
       <h1>Login</h1>
       <!-- This is where our form will go. -->
-      <form method="POST" action="{{ url_for('login') }}">
+      <form method="POST" action="{{ url_for('login') }}" novalidate>
         {{ form.csrf_token }}
         <p>
           {{ form.email.label }} <br />
@@ -19,7 +19,8 @@
         </p>
         <p>
           {{ form.password.label }} <br />
-          {{ form.password(size=30 )}} {% for err in form.password.errors %}
+          {{ form.password(size=30 )}}
+		  {% for err in form.password.errors %}
           <span style="color: red">{{ err }}</span>
           {% endfor %}
         </p>
