--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>{% block title %}{% endblock %}</title>
-</head>
+    <style>
+      {% block styling %}
+      body {
+          background: purple;
+      }
+      {% endblock %}
+    </style>
+  </head>
 
-<body>
+  <body>
     {% block content %}{% endblock %}
-</body>
-
+  </body>
 </html>
