implemented bootstrap5 via boostrap-flask, use jina templating to extend to index.html and replaced login.html form code block with bootstrap. to render the form instead.

--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block tittle %}Success{% endblock %}
+{% block head %}{% endblock %}
 {% block content %}
 	<div class="container">
 		<h1>Top Secret </h1>
