--- a/templates/denied.html
+++ b/templates/denied.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
-{% block tittle %}Access Denied{% endblock %}
-{% block styling %}
-	{{ super() }}
-	h1 {
-		color:red;
-	}
-{% endblock %}
+{% block head %}{% endblock %}
+
 {% block content %}
 	<div class="container">
 		<h1>Access Denied </h1>
