--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,11 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+{% from 'bootstrap5/form.html' import render_form %}
+{% block head %}{% endblock %}
 
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
+{% block content %}
     <div class="container">
       <h1>Login</h1>
       <!-- This is where our form will go. -->
-      <form method="POST" action="{{ url_for('login') }}" novalidate>
-        {{ form.csrf_token }}
-        <p>
-          {{ form.email.label }} <br />
-          {{ form.email(size=30 )}} 
-		  {% for err in form.email.errors %}
-          <span style="color: red">{{ err }}</span>
-          {% endfor %}
-        </p>
-        <p>
-          {{ form.password.label }} <br />
-          {{ form.password(size=30 )}}
-		  {% for err in form.password.errors %}
-          <span style="color: red">{{ err }}</span>
-          {% endfor %}
-        </p>
-        {{ form.submit }}
-      </form>
+        {{ render_form(form) }}
     </div>
-  </body>
-</html>
+{% endblock %}
